--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "type": "commonjs",
   "dependencies": {
     "node-fetch": "^3.3.2"
+    "next": "^14.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
